--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,26 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"buzlinholding","appId":"1:281710856003:android:c4cb97b5fa141a696451f6","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"buzlinholding","configurations":{"android":"1:281710856003:android:c4cb97b5fa141a696451f6","ios":"1:281710856003:ios:042a31b173163d9d6451f6"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "buzlinholding",
+          "appId": "1:281710856003:android:c4cb97b5fa141a696451f6",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "buzlinholding",
+          "configurations": {
+            "android": "1:281710856003:android:c4cb97b5fa141a696451f6",
+            "ios": "1:281710856003:ios:042a31b173163d9d6451f6"
+          }
+        }
+      }
+    }
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  }
+}
